[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E731", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["llmtuner"]
known-third-party = [
    "accelerate",
    "datasets",
    "gradio",
    "numpy",
    "peft",
    "torch",
    "transformers",
    "trl",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry]
name = "opencompass"
version = "0.1.0"
description = ""
authors = ["xiaojin <xiaojinwhu10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=1.13.1"
transformers = ">=4.37.2"
datasets = ">=2.14.3"
accelerate = ">=0.27.2"
peft = ">=0.9.0"
trl = ">=0.7.11"
gradio = ">=3.38.0,<4.0.0"
scipy = "^1.12.0"
einops = "^0.7.0"
sentencepiece = "^0.2.0"
protobuf = "^4.25.3"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
nltk = "^3.8.1"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
fastapi = "^0.110.0"
sse-starlette = "^2.0.0"
matplotlib = "^3.8.3"
deepspeed = "0.13.1"
